--- a/Project Hand Off/group49-project_hand_off.tex
+++ b/Project Hand Off/group49-project_hand_off.tex
@@ -1148,6 +1148,9 @@ Looking back at this project, while I am happy with what we did, I do think we s
 
 
 \subsection{Shannon Sandy's Reflection}
+While working on this project, I have gained significant technical and non-technical information. My knowledge of the graphics pipeline was strengthened and I have learned how to import .obj and .mtl files into an OpenGL program. I also became more skilled with writing GLSL shaders. I also learned how to play audio files in an OpenGL program as well as prematurely end thos audio files when a scene is changed. During the development of this project, I gained a deeper understanding of the importance of documenting requirements in detail. I also have learned more about what effective communication looks like within a team and with a client. Organization and time mangament where also skills that I strengthened while working on this project.
+
+During the development of this project, I realized how setting weekly goals helped with meeting our larger project goals. Weekly meetings with my team also made it easier for us all to understand who is working on what aspects of the project and their progress. I feel I have also gotten better at adapting to and overcoming sudden changes that happen well into the development of the project. If I were to do this all over again, something I would do differently is get into contact with SkySkan earlier. This would allow us to have more time to learn the DarkMatter scripting language and also have a better idea of how the project will be implemented in the planetarium. I would also try and communicate with our client earlier so our team could have a clearer, more detailed understanding of our requirements before we start our requirements documents and project outline.
 
 
 %\section{Appendix}
