added nasa sites to resources

--- a/Project Hand Off/group49-project_hand_off.tex
+++ b/Project Hand Off/group49-project_hand_off.tex
@@ -1114,7 +1114,11 @@ Once built, the program will run automatically, but will also output an executab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Resources}
 
-Our most valuable resource was Mike Bailey, our mentor and computer graphics professor here at Oregon State University. with his many years of experience with computer graphics, and specifically OpenGL, nearly all questions were answered by Mike. Additionally, our client, Jim Todd, gave us all the technical knowledge for the planetarium system at OMSI and how to implement a solution there. 
+Our most valuable resource was Mike Bailey, our mentor and computer graphics professor here at Oregon State University. with his many years of experience with computer graphics, and specifically OpenGL, nearly all questions were answered by Mike. Additionally, our client, Jim Todd, gave us all the technical knowledge for the planetarium system at OMSI and how to implement a solution there. We also used NASA's online archives to obtain audio files and 3D object files for the lunar module, astronaut, and landing site.
+
+NASA Apollo 11 Audio Archive: https://archive.org/details/Apollo11Audio
+
+NASA 3D Models Github: https://github.com/nasa/NASA-3D-Resources
 
 %Websites here
  
