added to the project flow section

--- a/Project Hand Off/group49-project_hand_off.tex
+++ b/Project Hand Off/group49-project_hand_off.tex
@@ -1108,6 +1108,7 @@ Once built, the program will run automatically, but will also output an executab
 \end{itemize}
 
 %'Project flow' here:
+Because the program does not have a narrative, the user can view and interact with the scenes in order they choose. Since the flight path scene is the first scene displayed when the program is ran, the user will begin at that scene. Afterwards, users are encouraged to view the scenes bound to keys listed above and use the mouse and zoom in/out functions to further explore them. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
