--- a/Project Hand Off/group49-project_hand_off.tex
+++ b/Project Hand Off/group49-project_hand_off.tex
@@ -221,8 +221,8 @@ Our group will be recreating the Apollo 11 mission using 3D graphics. This proje
 \subsection{Gantt Chart}
 
 \begin{figure}[!htb]
-    \includegraphics[width=\linewidth]{Gantt.PNG}
-    \caption{Original gantt chart of proposed timeline}
+    \includegraphics[width=\linewidth]{Gantt.eps}
+    \caption{Original Gantt chart of timeline}
     \label{fig:Gantt Chart}
 \end{figure}
 
